# AoC2025

./: .gitignore  AoC2025.cabal
src/: Day01.hs
test/: Main.hs
