cabal-version:      3.0
name:               AoC2025
version:            0.1.0.0
-- synopsis:
-- description:
license:            Unlicense
license-file:       UNLICENSE
author:             infiKNIGHTe
maintainer:         infiknightedev@gmail.com
-- copyright:
category:           Math
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Day01
    -- other-modules:
    -- other-extensions:
    build-depends: base ^>=4.21.0.0,
    hs-source-dirs:   src
    default-language: GHC2024

test-suite AoC2025-test
    import:           warnings
    default-language: GHC2024
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        AoC2025
